update allowed cors origin